adding the position control button to nav

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,5 @@
 .header{
     display: flex;
-    /* align-items: center; */
-    /* justify-content: space-between; */
     border-bottom: 1px solid whitesmoke;
 }
 
@@ -16,6 +14,5 @@
 }
 
 .header__middle{
-    margin-left: 20px;
-    margin-top: 15px;
+    display: flex;
 }
