--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,12 +6,12 @@
 }
 
 .header__left{
-    display: flex;
+    /* display: flex; */
 }
 
 .header__right{
-    display: flex;
-    justify-content: flex-end;
+    /* display: flex;
+    justify-content: flex-end; */
 }
 
 .header__middle{
