--- a/src/components/Employees/Employees.css
+++ b/src/components/Employees/Employees.css
@@ -6,8 +6,13 @@
 
 .employees__left{
     flex: 0.3;
+    display: flex;
+    flex-direction: row;
+
 }
 
 .employees__right{
     flex: 0.7;
+    display: flex;
+    flex-wrap: wrap;
 }
