finishing up the employees page

--- a/src/components/Employees/Employees.css
+++ b/src/components/Employees/Employees.css
@@ -1,7 +1,10 @@
 .employees{
-    width: 100%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    align-items: center;
+    height: inherit;
+    padding: 20px;
+
 }
 
 .employees__left{
@@ -16,15 +19,129 @@
    
     
 }
-.item {
-    position: relative;
-    margin: 10px 0;
+body, div, form, input, select, p { 
+    padding: 0;
+    margin: 0;
+    outline: none;
+    font-family: Roboto, Arial, sans-serif;
+    font-size: 14px;
+    color: #666;
+    line-height: 22px;
     }
 
-.item input:hover, .item select:hover {
-    border: 1px solid transparent;
-    box-shadow: 0 0 6px 0 #095484;
-    color: #095484;
-    }
-
-    
+    input, select {
+        margin-bottom: 10px;
+        border: 1px solid #ccc;
+        border-radius: 3px;
+        }
+        input {
+        width: calc(100% - 10px);
+        padding: 5px;
+        }
+        select {
+        width: 100%;
+        padding: 7px 0;
+        background: transparent;
+        }
+        .item:hover p, .item:hover i, .question:hover p, .question label:hover, input:hover::placeholder, a {
+        color: #095484;
+        }
+        .item input:hover, .item select:hover {
+        border: 1px solid transparent;
+        box-shadow: 0 0 6px 0 #095484;
+        color: #095484;
+        }
+        .item {
+        position: relative;
+        margin: 10px 0;
+        }
+        
+      input[type="date"]::-webkit-inner-spin-button {
+        display: none;
+        }
+        .item i, input[type="date"]::-webkit-calendar-picker-indicator {
+        position: absolute;
+        font-size: 20px;
+        color: #a9a9a9;
+        }
+        .item i {
+        right: 2%;
+        top: 30px;
+        z-index: 1;
+        }
+        [type="date"]::-webkit-calendar-picker-indicator {
+        right: 1%;
+        z-index: 2;
+        opacity: 0;
+        cursor: pointer;
+        }
+        input[type=checkbox]  {
+        display: none;
+        }
+        label.check {
+        position: relative;
+        display: inline-block;
+        margin: 5px 20px 10px 0;
+        cursor: pointer;
+        }
+        .question span {
+        margin-left: 30px;
+        }
+        span.required {
+        margin-left: 0;
+        color: red;
+        }
+        label.check:before {
+        content: "";
+        position: absolute;
+        top: 2px;
+        left: 0;
+        width: 16px;
+        height: 16px;
+        border-radius: 2px;
+        border: 1px solid #095484;
+        }
+        input[type=checkbox]:checked + .check:before {
+        background: #095484;
+        }
+        label.check:after {
+        content: "";
+        position: absolute;
+        top: 6px;
+        left: 4px;
+        width: 8px;
+        height: 4px;
+        border: 3px solid #fff;
+        border-top: none;
+        border-right: none;
+        transform: rotate(-45deg);
+        opacity: 0;
+        }
+        input[type=checkbox]:checked + label:after {
+        opacity: 1;
+        }
+        .btn-block {
+        margin-top: 10px;
+        text-align: center;
+        }
+        button {
+        width: 150px;
+        padding: 10px;
+        border: none;
+        border-radius: 5px; 
+        background: #095484;
+        font-size: 16px;
+        color: #fff;
+        cursor: pointer;
+        }
+        button:hover {
+        background: #0666a3;
+        }
+        
+        .name-item input, .city-item input {
+            width: calc(33% - 20px);
+            margin-right: 5px;
+            }
+        .city-item select {
+        width: calc(50% - 8px);
+        }
