fixing the styling of the employees page in order for items to line up

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -15,10 +15,10 @@
 
 .header__middle{
     display: flex;
-    margin: 10px 50px;
+    margin: 10px 0;
     justify-content: space-evenly;
 }
 
 .header__middle > Button{
-    margin: 0 15px;
+    margin: 0 10px;
 }
