--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,7 @@
 .footer{
     display: flex;
     justify-content: center;
+    align-items: center;
     position: absolute;
     left: 0;
     bottom: 0;
