--- a/src/components/Employees/Employees.css
+++ b/src/components/Employees/Employees.css
@@ -2,7 +2,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: inherit;
     padding: 20px;
 
 }
@@ -10,9 +9,15 @@
 .employees__left{
     flex: 0.2;
     display: flex;
-    flex-direction: row;
-
+    margin-right: 50px;
+    height: 100%;
+    flex-direction: column;
 }
+
+.employees__left > input {
+    padding-top: 10px;
+}
+
 
 .employees__right{
     flex: 0.7;
