--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,9 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
     left: 0;
     bottom: 0;
-    height: 100px;
+    min-height: 100vh;
     width: 100%;
 }
